[gd_scene load_steps=5 format=2]

[ext_resource path="res://asset/visual/sprite/companion/body.png" type="Texture" id=1]
[ext_resource path="res://script/character/companion/companion.gd" type="Script" id=2]
[ext_resource path="res://scene/ui/dialogue_box/DialogueBox.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=4]
radius = 24.0208

[node name="Companion" type="Node2D" groups=["companion"]]
script = ExtResource( 2 )
avoidance_resolution = 128
look_ahead = 128

[node name="DialogueLayer" type="CanvasLayer" parent="."]

[node name="DialogueBox" parent="DialogueLayer" instance=ExtResource( 3 )]
font_color = Color( 0.937255, 0.556863, 0.968627, 1 )

[node name="Body" type="RigidBody2D" parent="."]
collision_mask = 2
mode = 2
gravity_scale = 0.0

[node name="Sprite" type="Sprite" parent="Body"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body"]
shape = SubResource( 4 )

[node name="TargetRay" type="RayCast2D" parent="Body"]
enabled = true

[node name="DangerRay" type="RayCast2D" parent="Body"]
enabled = true
collision_mask = 3
